<resources>
    <string name="app_name">Little Brother</string>
    <string name="title_device_detail">Device Detail</string>
    <string name="title_activity_main">Little Brother</string>
    <string name="see_devices">Devices</string>
    <string name="devices_around">Devices \n around you</string>
    <string name="see_data">Data</string>
    <string name="go_to_web">Go to Website</string>
    <string name="your_devices">Your Devices</string>
    <string name="test">Test</string>
    <string name="settings">Settings</string>
    <string name="title_activity_devices_around">Devices Around You</string>
    <string name="title_activity_load_stored_data">Data Stored on Your Phone</string>
    <string name="title_activity_settings">Settings</string>
    <string name="upload_data_button">upload now</string>
    <string name="register">register</string>
    <string name="register_device">register device</string>
    <string name="sensor_delete_button_description"> deletes the sensor </string>
    <string name="sensor_plus_one_button_description"> adds another sensor to be registered </string>
    <string name="sensor_text_hint"> sensor name </string>
    <string name="sensor_add_text">+</string>
    <string name="device_name_input_title">Device Name:</string>
    <string name="add_sensor_title">Add Sensors:</string>
    <string name="device_receiver_category">edu.cmu.ece18549.litte_brother.littlebrother.category.device_receiver</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Network &amp; Data</string>

    <string name="pref_title_sync_frequency">Server upload frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>immediate</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>5</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="network_pref_array">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <string-array name="network_pref_values">
        <item>Wi-Fi</item>
        <item>Any</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_device_register">DeviceRegister</string>
    <string name="network_use"> Network use </string>

</resources>
