<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DeviceRegisterActivity"
    tools:showIn="@layout/activity_device_register">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sensor_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addSensorTitle"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_device"
        android:id="@+id/registerDeviceButton"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/sensor_list" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/deviceNameInputTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/device_name_input_title"
        android:id="@+id/deviceNameInputTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_sensor_title"
        android:id="@+id/addSensorTitle"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

</RelativeLayout>
